# content_creator

./: .dockerignore  .env.example  .env.placeholder.bak  .gitignore  Caddyfile  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  environment.yaml  pyproject.toml
avatars/: prompt_avatar_creator.md
content_creator/agentic/: capabilities.py  ltx_client.py  ltx_prompting.py  trace.py  video_agent.py  video_content_generator.py  video_skills.py  video_tools.py
content_creator/agentic/skills/: avatar_only.md  avatar_story.md  free_creator.md
content_creator/config/: channels.json  channels.py  config.py  config_jt.py  schema.py
content_creator/pipelines/: for-claude.py  modules.py  modules_jt.py  pipeline.py  pipeline_agentic.py  pipeline_jt.py  pipeline_multi.py  processed.py
control_panel/: README.md  __init__.py
control_panel/backend/: __init__.py  gcs_util.py  main.py  run_manager.py  store.py
control_panel/backend/routers/: __init__.py  catalog.py  channels.py  characters.py  gallery.py  runs.py
control_panel/frontend/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts
control_panel/frontend/src/: App.css  App.tsx  catalog.tsx  index.css  lib.ts
control_panel/frontend/src/api/: client.ts  schemas.ts  types.ts
control_panel/frontend/src/components/: CatalogTab.tsx  ChannelEditor.tsx  ChannelsTab.tsx  CharactersTab.tsx  GalleryTab.tsx  RunsTab.tsx
